--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create New Item", new_portfolio_url%>
 
 <% @portfolio_items.each do |portfolio_item| %>
-  <h4><%= portfolio_item.title %></h4>
+  <h4><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></h4>
   <p><%= portfolio_item.subtitle %></p>
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
