--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
       
     <%= yield %>
 
+    <%= copyright_generator %>
+
   <% if session[:source] %>
     Thanks for visiting me from <%= session[:source] %>
     <% end %>
