--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,19 +22,14 @@
         <div><%= link_to "Portfolio", portfolios_path %></div>
        </div>
        
-       <% if current_user.is_a?(User) %>
-         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-       <%else%>
-        <%= link_to "Register", new_user_registration_path %>
-        <%= link_to "Login", new_user_session_path %>
-      <% end %>
+       <%= login_helper %>
+    
       
     <%= yield %>
 
     <%= copyright_generator %>
 
-  <% if session[:source] %>
-    Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+  <%= source_helper %>
+  
   </body>
 </html>
