--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Portfolio Items</h1>
 
-<%= link_to "Create New Item", new_portfolio_url%>
+<%= link_to "Create New Item", new_portfolio_url if logged_in?(:site_admin)%>
 
 <% @portfolio_items.each do |portfolio_item| %>
   <h4><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></h4>
   <p><%= portfolio_item.subtitle %></p>
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-  <%= link_to "edit", edit_portfolio_path(portfolio_item.id)%>
-  <td><%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <%= link_to "edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
+  <td><%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
 <% end %>
